More patching for :jablib:test